--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
-{% set version = "0.3.3" %}
-
+{% set version = '0.3.3' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -15,7 +14,7 @@ source:
   sha256: 39ef207779361c9c2a84f06667136743750608ee8b34cbffbca067e317a30646
 
 build:
-  number: 0
+  number: 1
   skip: true  # [win32]
 
   rpaths:
@@ -29,11 +28,13 @@ requirements:
     - posix                # [win]
     - {{native}}toolchain  # [win]
     - gcc                  # [not win]
+    - {{native}}gsl
 
   run:
     - r-base
     - r-rcpp >=0.11.0
     - libgcc  # [not win]
+    - {{native}}gsl
 
 test:
   commands:
@@ -55,6 +56,8 @@ about:
     can all be used as a stanza to  write a similar package against another library.'
 
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'  # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'  # [win]
 
 extra:
   recipe-maintainers:
