--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "0.3.7" %}
+{% set version = '0.3.7' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -7,46 +7,52 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: RcppGSL_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/RcppGSL_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/RcppGSL/RcppGSL_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/RcppGSL_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/RcppGSL/RcppGSL_{{ version }}.tar.gz
   sha256: 45e95c4170fc8421ae9b32134b3a402f76ea9657030969723a3563c7ce14dc32
 
 build:
   merge_build_host: True  # [win]
   number: 0
-  skip: true  # [win32]
-
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
-    - posix                # [win]
-    - {{ compiler('c') }}        # [unix]
-    - {{ compiler('m2w64_c') }}  # [win]
-    - {{ compiler('cxx') }}        # [unix]
-    - {{ compiler('m2w64_cxx') }}  # [win]
+    - {{ compiler('c') }}              # [not win]
+    - {{ compiler('m2w64_c') }}        # [win]
+    - {{ compiler('cxx') }}            # [not win]
+    - {{ compiler('m2w64_cxx') }}      # [win]
+    - {{posix}}filesystem        # [win]
+    - {{posix}}sed               # [win]
+    - {{posix}}grep              # [win]
+    - {{posix}}autoconf
+    - {{posix}}automake          # [not win]
+    - {{posix}}automake-wrapper  # [win]
+    - {{posix}}pkg-config
+    - {{posix}}make
+    - {{posix}}coreutils         # [win]
+    - {{posix}}zip               # [win]
   host:
     - r-base
     - r-rcpp >=0.11.0
     - {{native}}gsl
-
   run:
     - r-base
+    - {{native}}gcc-libs         # [win]
     - r-rcpp >=0.11.0
     - {{native}}gsl
 
 test:
   commands:
-    - $R -e "library('RcppGSL')"  # [not win]
+    - $R -e "library('RcppGSL')"           # [not win]
     - "\"%R%\" -e \"library('RcppGSL')\""  # [win]
 
 about:
   home: https://CRAN.R-project.org/package=RcppGSL
-  license: GPL (>= 2)
+  license: GPL-2
   summary: '''Rcpp'' integration for ''GNU GSL'' vectors and matrices The ''GNU Scientific Library''
     (or ''GSL'') is a collection of numerical routines for scientific computing. It
     is particularly useful for C and C++ programs as it provides a standard C interface
@@ -57,14 +63,29 @@ about:
     as a prime example of how to build a package that uses ''Rcpp'' to connect to another
     third-party library. The ''autoconf'' script, ''inline'' plugin and example package
     can all be used as a stanza to  write a similar package against another library.'
-
-  license_family: GPL3
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
+  license_family: GPL2
+  license_file:
+    - '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
 
 extra:
   recipe-maintainers:
     - conda-forge/r
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
+
+# Package: RcppGSL
+# Type: Package
+# Title: 'Rcpp' Integration for 'GNU GSL' Vectors and Matrices
+# Version: 0.3.7
+# Date: 2019-10-20
+# Author: Dirk Eddelbuettel and Romain Francois
+# Maintainer: Dirk Eddelbuettel <edd@debian.org>
+# Description: 'Rcpp' integration for 'GNU GSL' vectors and matrices The 'GNU Scientific Library' (or 'GSL') is a collection of numerical routines for scientific computing. It is particularly useful for C and C++ programs as it provides a standard C interface to a wide range of mathematical routines. There are over 1000 functions in total with an extensive test suite. The 'RcppGSL' package provides an easy-to-use interface between 'GSL' data structures and R using concepts from 'Rcpp' which is itself a package that eases the interfaces between R and C++. This package also serves as a prime example of how to build a package that uses 'Rcpp' to connect to another third-party library. The 'autoconf' script, 'inline' plugin and example package can all be used as a stanza to  write a similar package against another library.
+# License: GPL (>= 2)
+# LazyLoad: yes
+# LinkingTo: Rcpp
+# Imports: Rcpp (>= 0.11.0), stats
+# Suggests: tinytest, inline
+# SystemRequirements: GNU GSL
+# NeedsCompilation: yes
+# Packaged: 2019-10-20 13:53:53.24488 UTC; edd
+# Repository: CRAN
+# Date/Publication: 2019-10-20 14:20:02 UTC
