--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
 
 build:
   merge_build_host: True  # [win]
-  number: 1
+  number: 2
   rpaths:
     - lib/R/lib/
     - lib/
@@ -39,6 +39,7 @@ requirements:
     - r-base
     - r-rcpp >=0.11.0
     - {{native}}gsl
+    - libblas
   run:
     - r-base
     - {{native}}gcc-libs         # [win]
