--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,12 +21,12 @@ build:
 
 requirements:
   build:
-    - cross-r-base {{ r_base }}  # [build_platform != target_platform]
-    - r-rcpp                     # [build_platform != target_platform]
-    - {{ compiler('c') }}              # [not win]
-    - {{ compiler('m2w64_c') }}        # [win]
-    - {{ compiler('cxx') }}            # [not win]
-    - {{ compiler('m2w64_cxx') }}      # [win]
+    - cross-r-base {{ r_base }}    # [build_platform != target_platform]
+    - r-rcpp                       # [build_platform != target_platform]
+    - {{ compiler('c') }}          # [not win]
+    - {{ compiler('m2w64_c') }}    # [win]
+    - {{ compiler('cxx') }}        # [not win]
+    - {{ compiler('m2w64_cxx') }}  # [win]
     - {{ posix }}filesystem        # [win]
     - {{ posix }}sed               # [win]
     - {{ posix }}grep              # [win]
@@ -41,7 +41,6 @@ requirements:
     - r-base
     - r-rcpp >=0.11.0
     - {{ native }}gsl
-    - libblas
   run:
     - r-base
     - {{ native }}gcc-libs         # [win]
@@ -54,7 +53,8 @@ test:
     - "\"%R%\" -e \"library('RcppGSL')\""  # [win]
 
 about:
-  home: https://CRAN.R-project.org/package=RcppGSL
+  home: https://github.com/eddelbuettel/rcppgsl
+  doc_url: https://dirk.eddelbuettel.com/code/rcpp.gsl.html
   license: GPL-2.0-or-later
   summary: "'Rcpp' integration for 'GNU GSL' vectors and matrices The 'GNU Scientific Library' (or 'GSL') is a collection of numerical routines for scientific computing. It is particularly useful for C and C++ programs as it provides a standard C interface to a wide range of mathematical routines. There are over 1000 functions\
     \ in total with an extensive test suite. The 'RcppGSL' package provides an easy-to-use interface between 'GSL' data structures and R using concepts from 'Rcpp' which is itself a package that eases the interfaces between R and C++. This package also serves as a prime example of how to build a package that uses 'Rcpp'\
@@ -62,26 +62,8 @@ about:
   license_family: GPL2
   license_file:
     - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2
+    - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
 
 extra:
   recipe-maintainers:
     - conda-forge/r
-
-# Package: RcppGSL
-# Type: Package
-# Title: 'Rcpp' Integration for 'GNU GSL' Vectors and Matrices
-# Version: 0.3.7
-# Date: 2019-10-20
-# Author: Dirk Eddelbuettel and Romain Francois
-# Maintainer: Dirk Eddelbuettel <edd@debian.org>
-# Description: 'Rcpp' integration for 'GNU GSL' vectors and matrices The 'GNU Scientific Library' (or 'GSL') is a collection of numerical routines for scientific computing. It is particularly useful for C and C++ programs as it provides a standard C interface to a wide range of mathematical routines. There are over 1000 functions in total with an extensive test suite. The 'RcppGSL' package provides an easy-to-use interface between 'GSL' data structures and R using concepts from 'Rcpp' which is itself a package that eases the interfaces between R and C++. This package also serves as a prime example of how to build a package that uses 'Rcpp' to connect to another third-party library. The 'autoconf' script, 'inline' plugin and example package can all be used as a stanza to  write a similar package against another library.
-# License: GPL (>= 2)
-# LazyLoad: yes
-# LinkingTo: Rcpp
-# Imports: Rcpp (>= 0.11.0), stats
-# Suggests: tinytest, inline
-# SystemRequirements: GNU GSL
-# NeedsCompilation: yes
-# Packaged: 2019-10-20 13:53:53.24488 UTC; edd
-# Repository: CRAN
-# Date/Publication: 2019-10-20 14:20:02 UTC
