--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,6 +41,7 @@ requirements:
     - r-base
     - r-rcpp >=0.11.0
     - {{ native }}gsl
+    - libblas
   run:
     - r-base
     - {{ native }}gcc-libs         # [win]
